@startuml
'https://plantuml.com/class-diagram

class AddressBookParser{}

class SortCommand{}

class CommandResult{}

class Person{
name: Name
phone: Phone
email: Email
remark: Remark
}

interface Model{}

AddressBookParser --> SortCommand

SortCommand --> CommandResult
SortCommand --> Person
SortCommand --> Model

@enduml